Bug 852762 - Arrow functions are not automatically strict. Also fixes bug 885067. r=ejpbruel.