js/src/frontend/Parser.cpp
@@ -1052,11 +1052,9 @@ Parser<ParseHandler>::functionBody(FunctionSyntaxKind kind, FunctionBodyType typ
     if (context->hasExtraWarningsOption() && pc->funHasReturnExpr && !checkFinalReturn(pn))
         return null();
 
-    if (kind != Arrow) {
-        /* Define the 'arguments' binding if necessary. Arrow functions don't have 'arguments'. */
-        if (!checkFunctionArguments())
-            return null();
-    }
+    /* Define the 'arguments' binding if necessary. */
+    if (!checkFunctionArguments())
+        return null();
 
     return pn;
 }
@@ -1920,10 +1918,10 @@ Parser<ParseHandler>::functionDef(HandlePropertyName funName, const TokenStream:
     // mode. Otherwise, we parse it normally. If we see a "use strict"
     // directive, we backup and reparse it as strict.
     handler.setFunctionBody(pn, null());
-    bool initiallyStrict = kind == Arrow || pc->sc->strict;
+    bool initiallyStrict = pc->sc->strict;
     bool becameStrict;
-    if (!functionArgsAndBody(pn, fun, funName, startOffset,
-                             type, kind, initiallyStrict, &becameStrict))
+    if (!functionArgsAndBody(pn, fun, funName, startOffset, type, kind, initiallyStrict,
+                             &becameStrict))
     {
         if (initiallyStrict || !becameStrict || tokenStream.hadError())
             return null();
