js/src/jit-test/tests/arrow-functions/bug-885067-2.js
@@ -1,0 +1,4 @@
+(function() {
+    a = (b => eval("dis(); arguments"))();
+})(1, 2, 3, 4);
+assertEq(a.length, 4);
