js/src/jit-test/tests/arrow-functions/typeof.js
@@ -1,0 +1,4 @@
+// The typeof an arrow function is "function".
+
+assertEq(typeof (() => 1), "function");
+assertEq(typeof (a => { return a + 1; }), "function");
